// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageInfo correctly render with data 1`] = `
<div
  className="page"
>
  <Header />
  <main
    className="page-content"
  >
    <section>
      <h2>
        Info
      </h2>
      <article>
        <p
          key="0"
        >
          test
           
          test
        </p>
        <p
          key="1"
        >
          test
           
          test
        </p>
      </article>
      <article>
        <dl
          className="info-icon"
        >
          <dt>
            A
             :
          </dt>
          <dd
            className="icon"
          >
            A
          </dd>
          <dt>
            C
             :
          </dt>
          <dd
            className="icon"
          >
            C
          </dd>
          <dt>
            D
             :
          </dt>
          <dd
            className="icon"
          >
            D
          </dd>
          <dt>
            E
             :
          </dt>
          <dd
            className="icon"
          >
            E
          </dd>
          <dt>
            F
             :
          </dt>
          <dd
            className="icon"
          >
            F
          </dd>
          <dt>
            G
             :
          </dt>
          <dd
            className="icon"
          >
            G
          </dd>
          <dt>
            H
             :
          </dt>
          <dd
            className="icon"
          >
            H
          </dd>
          <dt>
            I
             :
          </dt>
          <dd
            className="icon"
          >
            I
          </dd>
          <dt>
            J
             :
          </dt>
          <dd
            className="icon"
          >
            J
          </dd>
          <dt>
            K
             :
          </dt>
          <dd
            className="icon"
          >
            K
          </dd>
          <dt>
            L
             :
          </dt>
          <dd
            className="icon"
          >
            L
          </dd>
          <dt>
            M
             :
          </dt>
          <dd
            className="icon"
          >
            M
          </dd>
          <dt>
            N
             :
          </dt>
          <dd
            className="icon"
          >
            N
          </dd>
          <dt>
            O
             :
          </dt>
          <dd
            className="icon"
          >
            O
          </dd>
          <dt>
            P
             :
          </dt>
          <dd
            className="icon"
          >
            P
          </dd>
          <dt>
            Q
             :
          </dt>
          <dd
            className="icon"
          >
            Q
          </dd>
          <dt>
            R
             :
          </dt>
          <dd
            className="icon"
          >
            R
          </dd>
          <dt>
            S
             :
          </dt>
          <dd
            className="icon"
          >
            S
          </dd>
          <dt>
            T
             :
          </dt>
          <dd
            className="icon"
          >
            T
          </dd>
          <dt>
            U
             :
          </dt>
          <dd
            className="icon"
          >
            U
          </dd>
          <dt>
            V
             :
          </dt>
          <dd
            className="icon"
          >
            V
          </dd>
          <dt>
            W
             :
          </dt>
          <dd
            className="icon"
          >
            W
          </dd>
          <dt>
            X
             :
          </dt>
          <dd
            className="icon"
          >
            X
          </dd>
          <dt>
            Y
             :
          </dt>
          <dd
            className="icon"
          >
            Y
          </dd>
          <dt>
            b
             :
          </dt>
          <dd
            className="icon"
          >
            b
          </dd>
          <dt>
            c
             :
          </dt>
          <dd
            className="icon"
          >
            c
          </dd>
          <dt>
            e
             :
          </dt>
          <dd
            className="icon"
          >
            e
          </dd>
          <dt>
            f
             :
          </dt>
          <dd
            className="icon"
          >
            f
          </dd>
          <dt>
            i
             :
          </dt>
          <dd
            className="icon"
          >
            i
          </dd>
          <dt>
            k
             :
          </dt>
          <dd
            className="icon"
          >
            k
          </dd>
          <dt>
            l
             :
          </dt>
          <dd
            className="icon"
          >
            l
          </dd>
          <dt>
            n
             :
          </dt>
          <dd
            className="icon"
          >
            n
          </dd>
          <dt>
            p
             :
          </dt>
          <dd
            className="icon"
          >
            p
          </dd>
          <dt>
            s
             :
          </dt>
          <dd
            className="icon"
          >
            s
          </dd>
          <dt>
            t
             :
          </dt>
          <dd
            className="icon"
          >
            t
          </dd>
        </dl>
      </article>
      <article
        className="test"
      />
    </section>
  </main>
  <Footer />
</div>
`;

exports[`PageInfo correctly render without data 1`] = `
<div
  className="page"
>
  <Header />
  <main
    className="page-content"
  >
    <section>
      <h2>
        Info
      </h2>
      <article />
      <article>
        <dl
          className="info-icon"
        >
          <dt>
            A
             :
          </dt>
          <dd
            className="icon"
          >
            A
          </dd>
          <dt>
            C
             :
          </dt>
          <dd
            className="icon"
          >
            C
          </dd>
          <dt>
            D
             :
          </dt>
          <dd
            className="icon"
          >
            D
          </dd>
          <dt>
            E
             :
          </dt>
          <dd
            className="icon"
          >
            E
          </dd>
          <dt>
            F
             :
          </dt>
          <dd
            className="icon"
          >
            F
          </dd>
          <dt>
            G
             :
          </dt>
          <dd
            className="icon"
          >
            G
          </dd>
          <dt>
            H
             :
          </dt>
          <dd
            className="icon"
          >
            H
          </dd>
          <dt>
            I
             :
          </dt>
          <dd
            className="icon"
          >
            I
          </dd>
          <dt>
            J
             :
          </dt>
          <dd
            className="icon"
          >
            J
          </dd>
          <dt>
            K
             :
          </dt>
          <dd
            className="icon"
          >
            K
          </dd>
          <dt>
            L
             :
          </dt>
          <dd
            className="icon"
          >
            L
          </dd>
          <dt>
            M
             :
          </dt>
          <dd
            className="icon"
          >
            M
          </dd>
          <dt>
            N
             :
          </dt>
          <dd
            className="icon"
          >
            N
          </dd>
          <dt>
            O
             :
          </dt>
          <dd
            className="icon"
          >
            O
          </dd>
          <dt>
            P
             :
          </dt>
          <dd
            className="icon"
          >
            P
          </dd>
          <dt>
            Q
             :
          </dt>
          <dd
            className="icon"
          >
            Q
          </dd>
          <dt>
            R
             :
          </dt>
          <dd
            className="icon"
          >
            R
          </dd>
          <dt>
            S
             :
          </dt>
          <dd
            className="icon"
          >
            S
          </dd>
          <dt>
            T
             :
          </dt>
          <dd
            className="icon"
          >
            T
          </dd>
          <dt>
            U
             :
          </dt>
          <dd
            className="icon"
          >
            U
          </dd>
          <dt>
            V
             :
          </dt>
          <dd
            className="icon"
          >
            V
          </dd>
          <dt>
            W
             :
          </dt>
          <dd
            className="icon"
          >
            W
          </dd>
          <dt>
            X
             :
          </dt>
          <dd
            className="icon"
          >
            X
          </dd>
          <dt>
            Y
             :
          </dt>
          <dd
            className="icon"
          >
            Y
          </dd>
          <dt>
            b
             :
          </dt>
          <dd
            className="icon"
          >
            b
          </dd>
          <dt>
            c
             :
          </dt>
          <dd
            className="icon"
          >
            c
          </dd>
          <dt>
            e
             :
          </dt>
          <dd
            className="icon"
          >
            e
          </dd>
          <dt>
            f
             :
          </dt>
          <dd
            className="icon"
          >
            f
          </dd>
          <dt>
            i
             :
          </dt>
          <dd
            className="icon"
          >
            i
          </dd>
          <dt>
            k
             :
          </dt>
          <dd
            className="icon"
          >
            k
          </dd>
          <dt>
            l
             :
          </dt>
          <dd
            className="icon"
          >
            l
          </dd>
          <dt>
            n
             :
          </dt>
          <dd
            className="icon"
          >
            n
          </dd>
          <dt>
            p
             :
          </dt>
          <dd
            className="icon"
          >
            p
          </dd>
          <dt>
            s
             :
          </dt>
          <dd
            className="icon"
          >
            s
          </dd>
          <dt>
            t
             :
          </dt>
          <dd
            className="icon"
          >
            t
          </dd>
        </dl>
      </article>
      <article
        className="test"
      />
    </section>
  </main>
  <Footer />
</div>
`;
